--- a/apps/agent-workdesk/src/app/app.component.html
+++ b/apps/agent-workdesk/src/app/app.component.html
@@ -1,6 +1,4 @@
-<!-- <some-element *axLazyElement="elementUrl"></some-element> -->
-
-<header class="flex" *axLazyElement>
+<header class="flex">
   <img
     alt="Nx logo"
     width="75"
@@ -8,7 +6,7 @@
   />
   <h1>Welcome to {{ title }}!</h1>
 </header>
-<main>
+<!-- <main>
   <h2>Resources &amp; Tools</h2>
   <p>
     Thank you for using and showing some ♥ for Nx.
@@ -98,6 +96,6 @@ ng affected:e2e
 </pre
     >
   </details>
-</main>
+</main> -->
 
 <router-outlet></router-outlet>
