--- a/apps/agent-workdesk/src/app/app.component.html
+++ b/apps/agent-workdesk/src/app/app.component.html
@@ -1,6 +1,11 @@
-<main [@fadeAnimation]="getRouterOutletState(o)">
-  <router-outlet #o="outlet"></router-outlet>
+<main>
+  <router-outlet></router-outlet>
 </main>
+
+
+<!-- <main [@fadeAnimation]="getRouterOutletState(o)">
+  <router-outlet #o="outlet"></router-outlet>
+</main> -->
 
 <!-- <header class="flex">
   <img
