--- a/apps/agent-workdesk/src/app/app.component.scss
+++ b/apps/agent-workdesk/src/app/app.component.scss
@@ -1,3 +1,12 @@
+:host {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  & > main {
+    flex: 1;
+  }
+}
+
 // /*
 //  * Remove template code below
 //  */
