--- a/libs/auth/shared/auth/src/lib/forms/up.component.html
+++ b/libs/auth/shared/auth/src/lib/forms/up.component.html
@@ -7,7 +7,7 @@
       placeholder="Email"
       autocomplete="off"
     />
-    <span matSuffix *ngIf="loading">
+    <span matSuffix *ngIf="checkingEmail">
       <mat-spinner
         matSuffix
         strokeWidth="2"
@@ -16,16 +16,12 @@
       ></mat-spinner>
     </span>
     <mat-error *ngIf="email.invalid && email.dirty">
-      {{ email.errors.duplicated ? 'Email em uso' : 'Email inválido' }}
+      {{ email.hasError('duplicated') ? 'Email em uso' : 'Email inválido' }}
     </mat-error>
   </mat-form-field>
 
   <div class="flex-row gap">
-    <mat-form-field
-      class="flex-1"
-      [color]="email.valid && 'accent'"
-      *ngIf="!isPasswordReset"
-    >
+    <mat-form-field class="flex-1" [color]="email.valid && 'accent'">
       <input
         matInput
         formControlName="password"
@@ -35,7 +31,7 @@
       />
 
       <mat-error *ngIf="password.invalid && password.dirty">
-        Password must be at least 6 characters long
+        Mínimo de 6 caracteres
       </mat-error>
     </mat-form-field>
 
@@ -52,24 +48,24 @@
       />
 
       <mat-error *ngIf="passwordConfirm.dirty && !passwordDoesMatch">
-        Password does not match
+        Não confere
       </mat-error>
     </mat-form-field>
   </div>
   <!-- <suite-state-form [parentControl]="state"></suite-state-form> -->
   <suite-city-form (valueChange)="onCityChanged($event)"></suite-city-form>
 
-  <mat-error class="server-error">{{ serverMessage }}</mat-error>
+  <!-- <mat-error class="server-error">{{ serverMessage }}</mat-error> -->
 
   <button
     mat-raised-button
     color="accent"
     type="submit"
-    [disabled]="form.invalid || loading"
+    [disabled]="form.invalid || checkingEmail"
   >
-    Submit
+    Enviar
   </button>
 </form>
-<pre>
+<!-- <pre>
   {{ form.value | json }}
-</pre>
+</pre> -->
