--- a/libs/cdk/dialog/src/lib/dialog/dialog.component.html
+++ b/libs/cdk/dialog/src/lib/dialog/dialog.component.html
@@ -26,7 +26,7 @@
       </mat-toolbar-row>
     </mat-toolbar>
   </ng-container>
-  <div class="dialog-content">
+  <div class="suite-dialog-content">
     <ng-container cdkPortalOutlet></ng-container>
   </div>
 </div>
