--- a/libs/workdesk/admin/src/lib/team/team.component.html
+++ b/libs/workdesk/admin/src/lib/team/team.component.html
@@ -5,7 +5,7 @@
     <mat-icon>add</mat-icon>
   </a>
 </mat-toolbar>
-<a class="right-bottom" mat-fab routerLink="novo">
+<a class="right-bottom" mat-fab (click)="openDialogForm()">
   <mat-icon>add</mat-icon>
 </a>
 <suite-table-backend
