--- a/libs/workdesk/admin/src/lib/wage-tiers/wage-tiers.component.html
+++ b/libs/workdesk/admin/src/lib/wage-tiers/wage-tiers.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   Níveis salariais
   <div fxFlex fxFill></div>
-  <button mat-flat-button color="primary" (click)="openForm()">
+  <button mat-flat-button color="primary" (click)="add()">
     Adicionar
   </button>
 </mat-toolbar>
