--- a/libs/common/forms/dynamic-form/src/lib/dynamic-form/dynamic-form.component.html
+++ b/libs/common/forms/dynamic-form/src/lib/dynamic-form/dynamic-form.component.html
@@ -1,18 +1,9 @@
-<form (ngSubmit)="onSubmit()" [formGroup]="form">
-  <div *ngFor="let question of questions" class="form-row">
-    <suite-dynamic-form-question
-      [question]="question"
-      [form]="form"
-    ></suite-dynamic-form-question>
-  </div>
-
-  <div class="form-row">
-    <button type="submit" mat-button [disabled]="!form.valid">
-      Salvar
-    </button>
-  </div>
+<form class="dynamic-form" [formGroup]="form" (submit)="onSubmit($event)">
+  <ng-container
+    *ngFor="let field of fields"
+    suiteDynamicField
+    [field]="field"
+    [group]="form"
+  >
+  </ng-container>
 </form>
-
-<div *ngIf="payLoad" class="form-row">
-  <strong>Saved the following values</strong><br />{{ payLoad }}
-</div>
