--- a/libs/ui-kit/src/lib/dialog-form/dialog-form.component.html
+++ b/libs/ui-kit/src/lib/dialog-form/dialog-form.component.html
@@ -1,2 +1,2 @@
-<suite-dynamic-form [fields]="data" (submit)="close($event)">
+<suite-dynamic-form [fields]="data.formFields" (submit)="close($event)">
 </suite-dynamic-form>
