--- a/libs/common/tables/table-backend/src/lib/table-backend.component.html
+++ b/libs/common/tables/table-backend/src/lib/table-backend.component.html
@@ -1,5 +1,7 @@
-<mat-table
+<table
+  mat-table
   #table
+  class="simple"
   [dataSource]="dataSource"
   matSort
   matSortActive="id"
@@ -7,7 +9,7 @@
   matSortDirection="desc"
 >
   <ng-container matColumnDef="select">
-    <mat-header-cell *matHeaderCellDef>
+    <th mat-header-cell *matHeaderCellDef>
       <mat-checkbox
         (change)="$event ? masterToggle() : null"
         [checked]="selection.hasValue() && isAllSelected()"
@@ -15,8 +17,8 @@
         [aria-label]="checkboxLabel()"
       >
       </mat-checkbox>
-    </mat-header-cell>
-    <mat-cell *matCellDef="let row">
+    </th>
+    <td mat-cell *matCellDef="let row">
       <mat-checkbox
         (click)="$event.stopPropagation()"
         (change)="$event ? selection.toggle(row) : null"
@@ -24,38 +26,36 @@
         [aria-label]="checkboxLabel(row)"
       >
       </mat-checkbox>
-    </mat-cell>
+    </td>
   </ng-container>
   <ng-container
     *ngFor="let column of columns"
     [cdkColumnDef]="column.columnDef"
   >
-    <mat-header-cell *cdkHeaderCellDef mat-sort-header>{{
-      column.header
-    }}</mat-header-cell>
-    <mat-cell *cdkCellDef="let row">{{
-      column.cell(row) | formatCell: column.format
-    }}</mat-cell>
+    <th *cdkHeaderCellDef mat-sort-header>{{ column.header }}</th>
+    <td *cdkCellDef="let row">
+      {{ column.cell(row) | formatCell: column.format }}
+    </td>
   </ng-container>
   <ng-container matColumnDef="edit">
-    <mat-header-cell *matHeaderCellDef>&nbsp;</mat-header-cell>
-    <mat-cell *matCellDef="let row">
+    <th mat-header-cell *matHeaderCellDef>&nbsp;</th>
+    <td mat-cell *matCellDef="let row">
       <button type="button" mat-icon-button (click)="editClicked(row)">
         <mat-icon>edit</mat-icon>
       </button>
-    </mat-cell>
+    </td>
   </ng-container>
   <ng-container matColumnDef="delete">
-    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-    <mat-cell *matCellDef="let row">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let row">
       <button type="button" mat-icon-button (click)="delete.emit(row)">
         <mat-icon>delete</mat-icon>
       </button>
-    </mat-cell>
+    </td>
   </ng-container>
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-</mat-table>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+</table>
 <mat-paginator
   [length]="dataSource.resultsLength"
   [pageSize]="2"
