--- a/libs/common/forms/dynamic-form/src/lib/components/form-date/form-date.component.html
+++ b/libs/common/forms/dynamic-form/src/lib/components/form-date/form-date.component.html
@@ -1,4 +1,4 @@
-<mat-form-field class="w-full margin-top" [formGroup]="group">
+<mat-form-field class="w-full" [appearance]="field.appearance" [formGroup]="group">
   <input
     matInput
     [matDatepicker]="picker"
