--- a/libs/common/forms/dynamic-form/src/lib/components/form-select/form-select.component.html
+++ b/libs/common/forms/dynamic-form/src/lib/components/form-select/form-select.component.html
@@ -1,4 +1,5 @@
-<mat-form-field class="w-full margin-top" [formGroup]="group">
+<mat-form-field class="w-full" [appearance]="field.appearance" [formGroup]="group">
+  <mat-label>{{field.label}}</mat-label>
   <mat-select [placeholder]="field.label" [formControlName]="field.name">
     <mat-option *ngFor="let item of options" [value]="item.value">{{
       item.viewValue
