--- a/libs/ui-kit/src/lib/dialog-form/dialog-form.component.scss
+++ b/libs/ui-kit/src/lib/dialog-form/dialog-form.component.scss
@@ -3,7 +3,7 @@
   padding-bottom: 32px;
   display: block;
 }
-::ng-deep suite-dynamic-form {
+::ng-deep ui-dialog-form suite-dynamic-form {
   display: flex;
   height: 100%;
   & > form {
