--- a/libs/workdesk/admin/src/lib/admin-layout.component.scss
+++ b/libs/workdesk/admin/src/lib/admin-layout.component.scss
@@ -13,6 +13,7 @@
   main {
     flex: 1;
     position: relative;
+    display: flex;
   }
 
   ::ng-deep router-outlet ~ * {
@@ -24,10 +25,13 @@
       background-color: mat-color($custom-blue, contrast-500);
     }
   }
-  & > ::ng-deep router-outlet ~ * {
+  ::ng-deep router-outlet ~ * {
+    display: flex;
+    flex-flow: column;
+    flex: 1;
     position: absolute;
     width: 100%;
-    height: 100%;
+    // height: 100%;
     overflow: auto;
   }
 
