--- a/libs/nav/sidenav/src/lib/sidenav.component.scss
+++ b/libs/nav/sidenav/src/lib/sidenav.component.scss
@@ -4,7 +4,7 @@ mat-toolbar.mat-toolbar.sidenav-toolbar {
   background: $background-color__sidenav-toolbar;
   padding: 0 14px 0 24px;
   z-index: 1;
-  color: mat-color($custom-blue, A100);
+  // color: mat-color($custom-blue, A100);
   position: sticky;
   top: 0;
   left: 0;
