--- a/libs/school/lazy/classrooms/src/lib/classroom/classroom.component.html
+++ b/libs/school/lazy/classrooms/src/lib/classroom/classroom.component.html
@@ -1,1 +1,54 @@
-<p>classroom works!</p>
+<div
+  class="header accent p-24 pb-0"
+  fxLayout="column"
+  fxLayoutAlign="space-between"
+>
+  <div fxLayout="row" fxLayoutAlign="space-between start">
+    <span class="mat-display-1 mb-0 welcome-message">Welcome back, John! </span>
+
+    <!-- <button
+      mat-icon-button
+      class="sidebar-toggle mr-8"
+      fxHide.gt-md
+      (click)="toggleSidebar('project-dashboard-right-sidebar-1')"
+    >
+      <mat-icon>menu</mat-icon>
+    </button> -->
+  </div>
+
+  <div fxLayout="row">
+    <div class="selected-project">{{ classroom.name }}</div>
+
+    <button
+      mat-icon-button
+      class="project-selector"
+      [matMenuTriggerFor]="projectsMenu"
+      aria-label="Select project"
+    >
+      <mat-icon>more_horiz</mat-icon>
+    </button>
+
+    <mat-menu #projectsMenu="matMenu">
+      <button
+        mat-menu-item
+        *ngFor="let classroomType of (classroomTypes$ | async)"
+        (click)="selectedProject = classroomType"
+      >
+        <span>{{ classroomType.name }}</span>
+      </button>
+    </mat-menu>
+  </div>
+</div>
+<div class="content">
+  <mat-tab-group dynamicHeight>
+    <mat-tab label="Home">
+      Home
+    </mat-tab>
+    <mat-tab label="Aulas">
+      Aulas
+    </mat-tab>
+    <mat-tab label="Alunos">
+      Alunos
+    </mat-tab>
+  </mat-tab-group>
+</div>
