--- a/libs/nav/toolbar/src/lib/toolbar.component.html
+++ b/libs/nav/toolbar/src/lib/toolbar.component.html
@@ -1,4 +1,12 @@
-<mat-toolbar color="primary" class="toolbar" fxLayout="row" fxLayoutAlign="space-between">
+<!-- fxLayout="row"
+  fxLayoutAlign="space-between" -->
+
+<mat-toolbar
+  color="primary"
+  class="toolbar"
+  fxLayout="row"
+  fxLayoutAlign="space-between"
+>
   <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="16px">
     <ng-content select="img"></ng-content>
     <span>{{ title }}</span>
@@ -6,13 +14,16 @@
     <suite-searchbar fxFlex="350px" fxHide fxShow.gt-md></suite-searchbar>
 
     <suite-menu-bar></suite-menu-bar>
+    <!-- <span fxFlex></span> -->
+    <!-- <div fxFlex fxAlign="flex-end"> -->
 
+    <!-- </div> -->
   </div>
   <div fxLayout="row">
     <div fxFlex fxFill></div>
-    <div fxFlex="250px" id="context-search-container"></div>
-    <div fxFlex="50px" id="context-fab-container"></div>
-
+    <!-- <div fxFlex="250px" id="context-search-container"></div>
+    <div fxFlex="50px" id="context-fab-container"></div> -->
+    <ng-content></ng-content>
     <!-- <mmws-search class="button" fxHide fxShow.gt-sm></mmws-search> -->
   </div>
 </mat-toolbar>
