--- a/libs/auth/lazy/sign/src/lib/sign-in/sign-in.component.html
+++ b/libs/auth/lazy/sign/src/lib/sign-in/sign-in.component.html
@@ -1,53 +1,55 @@
-<form [formGroup]="form" (ngSubmit)="onSignIn()">
-  <mat-form-field [color]="email.valid && 'accent'">
-    <input
-      matInput
-      formControlName="email"
-      type="email"
-      placeholder="Email"
-      autocomplete="off"
-    />
+<div
+  id="login-form"
+  [@animate]="{ value: '*', params: { duration: '300ms', y: '100px' } }"
+>
+  <mat-card>
+    <auth-in></auth-in>
+  </mat-card>
+  <a routerLink="../up" mat-button>Up</a>
+</div>
 
-    <mat-error *ngIf="email.invalid && email.dirty">
-      You must enter a valid email address
-    </mat-error>
-  </mat-form-field>
+<!-- <div
+  id="login-form"
+  [@animate]="{ value: '*', params: { duration: '300ms', y: '100px' } }"
+>
+  <form [formGroup]="form" (ngSubmit)="onSignIn()">
+    <mat-form-field [color]="email.valid && 'accent'">
+      <input
+        matInput
+        formControlName="email"
+        type="email"
+        placeholder="Email"
+        autocomplete="off"
+      />
 
-  <mat-form-field [color]="email.valid && 'accent'" *ngIf="!isPasswordReset">
-    <input
-      matInput
-      formControlName="password"
-      type="password"
-      placeholder="Password"
-      autocomplete="off"
-    />
+      <mat-error *ngIf="email.invalid && email.dirty">
+        You must enter a valid email address
+      </mat-error>
+    </mat-form-field>
 
-    <mat-error *ngIf="password.invalid && password.dirty">
-      Password must be at least 6 characters long
-    </mat-error>
-  </mat-form-field>
+    <mat-form-field [color]="email.valid && 'accent'" *ngIf="!isPasswordReset">
+      <input
+        matInput
+        formControlName="password"
+        type="password"
+        placeholder="Password"
+        autocomplete="off"
+      />
 
-  <mat-error class="server-error">{{ serverMessage }}</mat-error>
+      <mat-error *ngIf="password.invalid && password.dirty">
+        Password must be at least 6 characters long
+      </mat-error>
+    </mat-form-field>
 
-  <button
-    mat-raised-button
-    color="accent"
-    type="submit"
-    [disabled]="form.invalid || loading"
-  >
-    Submit
-  </button>
-  <!-- <div>
-    <label for="email">
-      Email
-    </label>
-    <input type="email" id="email" formControlName="email" required />
-  </div>
-  <div>
-    <label for="password">
-      Senha
-    </label>
-    <input type="password" id="password" formControlName="password" required />
-  </div>
-  <button>Login</button> -->
-</form>
+    <mat-error class="server-error">{{ serverMessage }}</mat-error>
+
+    <button
+      mat-raised-button
+      color="accent"
+      type="submit"
+      [disabled]="form.invalid || loading"
+    >
+      Submit
+    </button>
+  </form>
+</div> -->
