--- a/libs/auth/lazy/sign/src/lib/sign-shell.component.scss
+++ b/libs/auth/lazy/sign/src/lib/sign-shell.component.scss
@@ -7,6 +7,20 @@
 }
 ::ng-deep mat-tab-body {
   padding: 16px;
+  main {
+    flex: 1;
+    position: relative;
+    display: flex;
+  }
+  ::ng-deep router-outlet ~ * {
+    display: flex;
+    flex-flow: column;
+    flex: 1;
+    position: absolute;
+    width: 100%;
+    // height: 100%;
+    overflow: auto;
+  }
 }
 
 mat-card {
