--- a/libs/common/forms/dynamic-form/src/lib/components/form-button/form-button.component.html
+++ b/libs/common/forms/dynamic-form/src/lib/components/form-button/form-button.component.html
@@ -1,5 +1,11 @@
 <div class="w-full margin-top" [formGroup]="group">
-  <button type="submit" mat-raised-button [disabled]="group.invalid" color="primary">
+  <!-- <button type="submit" mat-raised-button [disabled]="group.invalid" color="primary"> -->
+  <button
+    type="submit"
+    mat-raised-button
+    [disabled]="group.invalid && !config?.actions.disableInvalid"
+    color="primary"
+  >
     {{ field.label }}
   </button>
 </div>
