--- a/libs/account/shared/account/src/lib/auth/in/in.component.html
+++ b/libs/account/shared/account/src/lib/auth/in/in.component.html
@@ -1,2 +1,3 @@
-<p>in works!</p>
-<suite-dynamic-form [fields]="fields" (submit)="onSubmit($event)"></suite-dynamic-form>
+<!-- <suite-dynamic-form [fields]="fields" (submit)="onSubmit($event)"></suite-dynamic-form> -->
+<!-- <pre>{{resource | json}}</pre> -->
+<suite-form-backend [config]="resource"></suite-form-backend>
