edu-helper and account

--- a/libs/account/lazy/account/src/lib/account-layout.component.html
+++ b/libs/account/lazy/account/src/lib/account-layout.component.html
@@ -16,3 +16,5 @@
   <account-dropdown></account-dropdown>
 </mat-toolbar>
 <router-outlet></router-outlet>
+
+<edu-helper-step-template></edu-helper-step-template>
