--- a/libs/account/lazy/account/src/lib/members/members.component.html
+++ b/libs/account/lazy/account/src/lib/members/members.component.html
@@ -3,7 +3,7 @@
     <router-outlet></router-outlet>
   </div>
   <div fxFlex="300px">
-    <mat-card>
+    <mat-card helperAnchor="members">
       <mat-nav-list>
         <mat-list-item>
           <a matLine routerLink="grupos">Grupos</a>
