--- a/libs/account/shared/account/src/lib/auth/in/in.component.html
+++ b/libs/account/shared/account/src/lib/auth/in/in.component.html
@@ -1,3 +1,4 @@
 <!-- <suite-dynamic-form [fields]="fields" (submit)="onSubmit($event)"></suite-dynamic-form> -->
 <!-- <pre>{{resource | json}}</pre> -->
-<suite-form-backend [config]="resource"></suite-form-backend>
+<suite-dynamic-form [fields]="resource" [config]="resource" (submit)="onSubmit($event)"></suite-dynamic-form>
+<!-- <suite-form-backend [config]="resource"></suite-form-backend> -->
