--- a/libs/common/forms/dynamic-form/src/lib/components/form-button/form-button.component.html
+++ b/libs/common/forms/dynamic-form/src/lib/components/form-button/form-button.component.html
@@ -3,7 +3,7 @@
   <button
     type="submit"
     mat-raised-button
-    [disabled]="group.invalid && !config?.actions.disableInvalid"
+    [disabled]="group.invalid && !config?.actions?.disableInvalid"
     color="primary"
   >
     {{ field.label }}
